<resources>

    <string name="app_name">vi-system</string>

    <!-- Register student attributes   -->
    <string name="username">username</string>
    <string name="student_id">student id</string>
    <string name="student_name">student name</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register button</string>

    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Closed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>