<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.AddStudentActivity"
    tools:ignore="HardCodedText">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:letterSpacing="0.0099"
            android:text="Student Registration"
            android:textAllCaps="true"
            android:textColor="@color/purple_500"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_above="@+id/cardView"
            android:src="@drawable/studentreg" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/custom_shape"
                android:orientation="vertical"
                android:paddingHorizontal="24dp"
                android:paddingTop="24dp"
                android:paddingBottom="5dp">


                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_shape"
                    android:contentDescription="@string/username"
                    android:drawableStart="@drawable/round_people_24"
                    android:drawablePadding="10dp"
                    android:hint="username"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/studentId"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_shape"
                    android:contentDescription="@string/student_id"
                    android:drawableStart="@drawable/baseline_perm_identity_24"
                    android:drawablePadding="10dp"
                    android:hint="student id"
                    android:inputType="text"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/studentName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/custom_shape"
                    android:contentDescription="@string/student_name"
                    android:drawableStart="@drawable/baseline_person_24"
                    android:drawablePadding="10dp"
                    android:hint="Name"
                    android:inputType="text"
                    android:padding="10dp" />


                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/custom_shape"
                    android:contentDescription="@string/password"
                    android:drawableStart="@drawable/baseline_password_24"
                    android:drawablePadding="10dp"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/cpassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/custom_shape"
                    android:contentDescription="@string/confirm_password"
                    android:drawableStart="@drawable/baseline_password_24"
                    android:drawablePadding="10dp"
                    android:hint="Confirm Password"
                    android:inputType="textPassword"
                    android:padding="10dp" />


                <Button
                    android:id="@+id/registerButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/custom_button"
                    android:backgroundTint="#ffffff"
                    android:contentDescription="Register Student"
                    android:enabled="true"
                    android:text="Register Student" />


                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/registerProgressIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="5dp"
                    android:indeterminate="true"
                    android:padding="5dp"
                    android:visibility="invisible"
                    app:showAnimationBehavior="inward"
                    app:trackThickness="5dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</RelativeLayout>